feat: add TypeORM 0.2.x and config connection to application

--- a/.docker/postgres/Dockerfile
+++ b/.docker/postgres/Dockerfile
@@ -1,4 +1,4 @@
-FROM postgres
+FROM postgres:latest
 
 # Libera o primeiro usuário do sistema para o user postgress e garanta o acesso ao diretório local
 RUN usermod -u 1000 postgres
