--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "express-async-errors": "^3.1.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.16"
+    "typeorm": "0.2.x"
   }
 }
