feat: add dotenv to configure environment variables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
   db:
     build: .docker/postgres
     container_name: 'api-db'
-    restart: always
+    restart: unless-stopped
     tty: true
     ports:
       - "5432:5432"
