--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
