--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/ioredis": "^5.0.0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.2.5",
     "@types/nodemailer": "^6.4.8",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.42.0",
@@ -39,10 +41,12 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "pg": "^8.11.0",
+    "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.x"
   }
